--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
 ./math_270/Farlow, Hall, et al., Differential Equations & Linear Algebra.pdf
 ./math_210/Rosen, Kenneth H, Discrete mathematics and its applications (2019).pdf
-./phys_1a/University Physics with Modern Physics 15th Edition By Hugh D. Young_compressed.pdf
+./phys_1a/phys_textbook.pdf
