renamed large pdfs (books) so they'd be ignored

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-./math_270/Farlow, Hall, et al., Differential Equations & Linear Algebra.pdf
-./math_210/Rosen, Kenneth H, Discrete mathematics and its applications (2019).pdf
-./phys_1a/phys_textbook.pdf
+eng_1a/world_ideas.pdf
+eng_1a/invis_man.pdf
+math_210/discrete_math.pdf
+smath_270/diff_eq.pdf
+phys_1a/phys_textbook1.pdf
