--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 eng_1a/world_ideas.pdf
 eng_1a/invis_man.pdf
 math_210/discrete_math.pdf
-smath_270/diff_eq.pdf
+math_270/diff_eq1.pdf
 phys_1a/phys_textbook1.pdf
