--- a/phys_1a/lab2/Pipfile
+++ b/phys_1a/lab2/Pipfile
@@ -1,15 +1,14 @@
 [[source]]
+name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-name = "pypi"
-
-[packages]
-pandas = "1.5.0"
-matplotlib = "3.6.0"
-numpy =  "1.23.3"
-scikit-learn = "1.1.2"
 
 [dev-packages]
 
+[packages]
+pandas = "==1.5.0"
+plotly = "==5.10.0"
+statsmodels = "*"
+
 [requires]
-python_version = "3.7"
+python_version = "3.9"
