some canges to hw2

--- a/cs_30/hw2/.vscode/settings.json
+++ b/cs_30/hw2/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "type_traits": "cpp",
+        "xutility": "cpp"
     }
 }
