--- a/phys_1a/lab4/Pipfile
+++ b/phys_1a/lab4/Pipfile
@@ -1,13 +1,14 @@
 [[source]]
-name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
-
-[dev-packages]
+name = "pypi"
 
 [packages]
 numpy = "==1.23.4"
-matplotlib = "==3.6.0"
+pandas = "==1.5.1"
+matplotlib = "==3.3.0"
+
+[dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.8"
