lab close done?

--- a/cs_30/project_2/.vscode/settings.json
+++ b/cs_30/project_2/.vscode/settings.json
@@ -7,6 +7,9 @@
         "unordered_map": "cpp",
         "vector": "cpp",
         "string_view": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "xstring": "cpp"
     }
 }
