worked on he/proj resub

--- a/cs_30/hw2/.vscode/settings.json
+++ b/cs_30/hw2/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "ostream": "cpp",
         "type_traits": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "xtree": "cpp"
     }
 }
